<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SeeA Player</string>
    <string name="link_fragment_text">Link Tube allow you to use your favourite app as fastest you want , thankyou </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api_key">AIzaSyA1hm7jOAf61Sc2kmAS_JE9E3hkBpf-fKk</string>
    <string name="youtube_description">YouTube icon</string>
    <string name="linktube_text">Link Tube allow yor to use your favourite app in SeeA Video Player, if you are using SeeA Video Player</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loading">Loading..</string>
    <string name="duration">00:00</string>
    <string name="semi_colon">:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to SeeA Player </string>
    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>
    <string name="audio_track">Audio Track</string>
    <string name="subtitle">Subtitle</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">O</string>
    <string name="playlist_btn">Playlist</string>
    <string name="favourites_btn">Favourite</string>
    <string name="shuffle_btn">Play</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_music_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30"> 30 Minutes</string>
    <string name="min_60"> 60 Minutes</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete"> Delete</string>
    <string name="user_name"> Your Name</string>
    <string name="add_song"> Add</string>
    <string name="remove_all"> Remove All</string>
    <string name="search_song"> Search Song</string>
    <string name="settings">Settings</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Send Feedback</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
    <string name="choose">Choose</string>
    <string name="enter_url">Search or Type Url</string>
    <string name="go_btn">Go Button</string>
    <string name="settings_btn">Setting Button</string>
    <string name="homePage">HomePage</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">FullScreen</string>
    <string name="save">Save</string>
    <string name="desktop">Desktop</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="view_all">View All</string>
    <string name="all_bookmarks">All Bookmarks</string>
    <string name="refresh_btn">Refresh</string>
    <string name="one">1</string>
    <string name="one_browse">1</string>
    <string name="durationChangeTextView">%1$s\n[ %2$s ]</string>
    <string name="vol_icon">vol_icon</string>
    <string name="volume">Volume:</string>
    <string name="text">13</string>
    <string name="Brightness_icon">brightness_icon</string>
    <string name="brightness">Brightness:</string>
    <string name="enter_video_name">Enter Video Name...</string>
    <string name="total_videos">Total Videos :</string>
    <string name="total_folders">Total Folders :</string>
    <string name="searchbackbtn">searchBackBtn</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="download">Download</string>
    <string name="link_tube">Link Tube</string>
    <string name="more">More</string>
    <string name="item_label">Membership duration</string>
    <string name="time_label">Membership days</string>
    <string name="quantity_label"> Quantity Memberships</string>
    <string name="client_id">338471719238-qq2m11b9538i70gduokf68apssqjd9lq.apps.googleusercontent.com</string>
    <string name="recant_videos">Recant Videos :</string>
    <string name="recant_musics">Recant Musics :</string>
    <string name="login_or_signin">Login or SignIn</string>
    <string name="seea">SeeA</string>
    <string name="_1ne">1NE</string>
    <string name="be_the_member_of_seea_player">Be the member of SeeA Player</string>
    <string name="subscribe_now">Go Ads-Free</string>
    <string name="app_theme">App Theme</string>
    <string name="subscriptions_plan">Subscriptions Plan</string>
    <string name="more_nav_settings">Settings</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="login">Sign Up</string>
    <string name="if_you_want_to_sinin_by_another_id_click_hare">If you want to SinIn by another ID click hare</string>
    <string name="signin">SignIn ?</string>
    <string name="username">UserName</string>
    <string name="enter_your_signin_email">Enter your Email</string>
    <string name="signIn_password">Password</string>
    <string name="activity_signin">Sign In</string>
    <string name="already_login_chick_here">Already have an account ?</string>
    <string name="already_signin_chick_here">Don\'t have an account ?</string>
    <string name="activity_signIn_login">Sign Up</string>
    <string name="seeA">SeeA</string>
    <string name="edu">Edu.</string>
    <string name="_140">₹ 149</string>
    <string name="year"> /year</string>
    <string name="seeA_2">SeeA</string>
    <string name="_1ne_2">1NE</string>
    <string name="best_for_users_who_like_to_play_video_and_music_on_mobile_and_tablet">Best for users who like to play video and music on mobile and tablet</string>
    <string name="monthly_n_15">Monthly</string>
    <string name="quarterly_n_75">Quarterly</string>
    <string name="biennial_n_599">Biennial</string>
    <string name="annual_n_149">Annual</string>
    <string name="or">or</string>
    <string name="apply_seea1ne_membership_code">Apply SeeAEdu. Membership code</string>
    <string name="seea_subscribe_now">Subscribe Now</string>
    <string name="seea_edus_seea">SeeA</string>
    <string name="seeaedu_1ne">1NE</string>
    <string name="_299">₹ 299</string>
    <string name="seeaedu_year"> /year</string>
    <string name="seeaedu_seea">SeeA</string>
    <string name="seeaedu_edu">Edu.</string>
    <string name="value_one">₹ 15</string>
    <string name="value_two">₹ 75</string>
    <string name="value_three">₹ 149</string>
    <string name="value_four">₹ 299</string>
    <string name="value_one_"> / month</string>
    <string name="value_two_"> / 3 month</string>
    <string name="value_three_"> / year</string>
    <string name="value_four_"> / 2 year</string>
    <string name="best_for_those_who_wants_to_provide_seea_player_in_group_a_institute_or_want_to_add_in_any_course">Best for those who wants to provide SeeA Player in group , a institute or want to add in any course .</string>
    <string name="start_process">Start Process</string>
    <string name="seea_music_player">SeeA Music Player</string>
    <string name="enter_seea1ne_membership_code">Enter SeeAEdu. Membership code</string>
    <string name="download_title" />
    <string name="download_file" />
    <string name="ok" />
    <string name="some_Error_Occurred" />
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="downloads_files">Downloads Files</string>
    <string name="history">History</string>
    <string name="link_tube_nav">Link Tube</string>
    <string name="app_exit">App Exit</string>
    <string name="search_nav">Search</string>
    <string name="monthly_15">Monthly\n₹15</string>
    <string name="quarterly__75">Semiannual\n₹75</string>
    <string name="biennial__599">Biennial\n₹299</string>
    <string name="annual__149">Annual\n₹149</string>
    <string name="__299">₹ 299</string>
    <string name="seeaeduYear"> /year</string>
    <string name="seeaeduSeea">SeeA</string>
    <string name="seeaeduEdu">Edu.</string>
    <string-array name="theme">

        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>

    </string-array>
    <string name="small_medium_native_ads">ca-app-pub-3504589383575544/1949128371</string>
    <string name="are_you_sure_you_want_to_clear_all_the_browsing_data">Are you sure , you want to clear all the browsing data?</string>
    <string name="if_you_clear_the_browsing_data_it_will_not_be_recoverable">If you clear the browsing data, it will not be recoverable.</string>
    <string name="clear_data_dialog_title">Are you sure , you want to clear all the browsing data?</string>
    <string name="clear_data_dialog_message">If you clear the browsing data, it will not be recoverable.</string>
    <string name="related_to_recant_searches">Related to recant searches</string>
    <string name="short_order">Short Order</string>
    <string name="link_tube_setting">Link Tube</string>
    <string name="downloads_files_settings">Downloads Files</string>
    <string name="history_settings">History</string>
    <string name="help">Help</string>
    <string name="about_para_1">Welcome to SeeA Player, the innovative amalgamation of cutting-edge technology and educational convenience. Developed with a keen understanding of the challenges faced by students in offline learning environments such as institutes, tuitions, and libraries, our app revolutionizes the way students access and engage with educational content.</string>
    <string name="about_para_2">At SeeA Player, we recognize the precious commodity of time in a student\'s life. That\'s why we\'ve meticulously crafted a multifaceted solution that seamlessly integrates three essential components:a versatile video player, a dynamic music player, and a personalized Google search browser.This powerful trifecta empowers students to optimize their learning experiences, efficiently navigate through diverse educational resources,and delve deep into their academic pursuits with unparalleled ease.</string>
</resources>