<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PlayerMusicLayout"
    android:orientation="vertical"
    tools:context=".PlayerMusicActivity">


    <!--    First Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"

       >

        <!--    Back Button-->
        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            app:tint="?android:attr/textColorPrimary"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/back_btn"
            android:padding="10dp" />

        <TextView
            android:id="@+id/nextMusicTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/seea_music_player"
            android:textColor="@color/cool_blue"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="italic"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"/>

        <!--        Favourite Button-->
        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/favorite_empty_icon"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/favourites_btn"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>

    <!--    Current Song Image-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:src="@drawable/music_speaker_three"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <!--    Current Song Name-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:gravity="center"


        android:textIsSelectable="true" />

    <!--    Floating Buttons for Previous, Pause & Next-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"

        >

        <!--        Previous Button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp"/>

        <!--        Play & Pause Button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>

        <!--        Next Button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"/>

    </LinearLayout>

    <!--    Seekbar & TextViews for it-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:gravity="center"/>
    </LinearLayout>

    <!--    Last Row for Various Player Options-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <!--        Repeat Button-->
        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_repeat_off_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            app:tint="@color/cool_pink" />

        <!--        Equalizer Button-->
        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/equalizer_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />

        <!--        Timer Button-->
        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_timer_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/sleep_timer"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />

        <!--        Share Button-->
        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_share_icon"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/share"
            android:layout_weight="1"
            app:tint="@color/cool_pink" />


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:adSize="380x60"
        android:layout_gravity="center_horizontal"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>
</LinearLayout>