<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end"
    android:background="#393838"
    android:padding="8dp">
    <ImageView
        android:id="@+id/checkBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_check_24"
        android:contentDescription="@string/rename"
        android:padding="8dp"
        app:tint="@color/white" />



    <ImageView
        android:id="@+id/shareBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/info_share"
        android:contentDescription="@string/rename"
        android:padding="8dp"
        app:tint="@color/white"/>

    <ImageView
        android:id="@+id/infoBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/round_info_24"
        android:contentDescription="@string/rename"
        android:padding="8dp"
        app:tint="@color/white"/>
    <ImageView
        android:id="@+id/renameBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_icon"
        android:contentDescription="@string/share"
        android:padding="8dp"
        app:tint="@color/white"/>

    <ImageView
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_icon"
        android:contentDescription="@string/delete"
        android:padding="8dp"
        app:tint="@color/white"/>

</LinearLayout>

